[package]
name = "fruitbasket"
version = "0.3.0"
authors = ["Trevor Bentley <mrmekon@gmail.com>"]
description = "Framework for running Rust programs in a Mac 'app bundle' environment."
keywords = ["mac", "osx", "bundle", "cocoa", "appkit"]
categories = ["api-bindings"]
homepage = "https://github.com/mrmekon/fruitbasket"
repository = "https://github.com/mrmekon/fruitbasket"
documentation = "https://mrmekon.github.io/fruitbasket/fruitbasket/"
license = "Apache-2.0"

[features]
logging = ["log", "log4rs"]

[dependencies]
objc-foundation = "0.1.1"
objc_id = "0.1"
time = "0.1"

log = {version = "0.3", optional = true }
[dependencies.log4rs]
version = "0.6"
optional = true
features = ["rolling_file_appender"]

[dev-dependencies]
log = "0.3"

[dependencies.objc]
version = "0.2"
features = ["exception"]

[package.metadata.release]
sign-commit = false
upload-doc = true
pre-release-commit-message = "Release {{version}}"
dev-version-ext = "rc"
tag-message = "Release {{version}}"
doc-commit-message = "Release {{version}}"
